--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,20 @@ branches:
   only:
     - master
 
+cd ..
+git clone https://github.com/warfka/firstRep.io.git
+cd PO-31.github.io
+export OUT_LANG='ENGLISH' && rm -d -f -r en && mkdir en && cd en && doxygen ../Doxyfile
+cd ..
+export OUT_LANG='RUSSIAN' && rm -d -f -r ru && mkdir ru && cd ru && doxygen ../Doxyfile
+
+git config --global user.name "warfka"
+git config --global user.email "travis@travis.org"
+git add -A
+
+git commit -am "Update doc from Travis CI"
+git config --global push.default simple
+
+# The secret key set in Travis CI environment settings
+git push -f -q https://warfka:$GITHUB_API_KEY@github.com/warfka/firstRep.io.git
+exit
