--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,16 @@ before_instal: sudo apt-get install doxygen
 language: cpp 
 matrix:
   include:
+     - stage: test
      compiler: cpp
-branches:
-  only:
-    - master
-script:
+     script:
+     - wc -l 1lb.cpp
+   
+     compiler: gсс
+      script:
+     - wc -l 1fghnb.cpp
+   script:
+  - wc
   - git clone https://github.com/warfka/firstRep.io.git
   - cd firstRep.io
   - doxygen
@@ -16,3 +21,7 @@ script:
   - git commit -am "Update doc from Travis CI"
   - git config --global push.default simple
   - git push -f -q https://warfka:$GITHUB_API_KEY@github.com/warfka/firstRep.io.git
+
+branches:
+  only:
+    - master
