--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ before_instal: sudo apt-get install doxygen
 language: cpp 
 jobs:
   include:
-     - stage: test
+     - stage: "test"
      name: t1
      script:
      - wc -l 1lb.cpp
