--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+language: cpp
 jobs:
     include:
      - stage: "test1"
     
        name: t1
        os: linux
-     - script: wc -l 1lb.cpp
+     - script: wc -l lb1.cpp
    
      - name: t2
        os: linux
