--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,33 @@
 language: cpp
 jobs:
-    include:
-     - stage: "test1"
-    
-       name: t1
-       os: linux
-     - script: wc -l lb1.cpp
-   
-     - name: t2
-       os: linux
-     - script: wc -l 1fghnb.cpp
+include:
+- stage: "Building"
+
+name: "Building"
+os: linux
+compiler: gcc
+script:
+- gcc -fPIC -c matrixfact.c -o matrixfact.o
+- gcc -shared matrixfact.o -o libmatrixfact.so
+- gcc -I`pwd` -L`pwd` dinoPRO.c -lmatrixfact -o dinoPRO
+
+
+- stage: Documentation
+
+name: "Documentation"
+os: linux
+compiler: gcc
+before_install:
+- sudo apt-get install doxygen
+script:
+- git clone https://github.com/ImyaPolzovatelyaPolzovatel/Doxygen..
+- mv Doxyfile matrixfact.c Doxygen/
+- cd Doxygen
+- doxygen
+- rm Doxyfile matrixfact.c
+- git config —global user.name "travis"
+- git config —global user.email "2019103620@pnu.edu.ru"
+- git add -A
+- git commit -am "Update doc from Travis CI"
+- git config —global push.default simple
+- git push -f -q https://ImyaPolzovatelyaPolzovatel:${GITHUB_API_KEY}@github.com/ImyaPolzovatelyaPolzovatel/Doxygen.git
