--- a/.travis.yml
+++ b/.travis.yml
@@ -5,29 +5,26 @@ include:
 
 name: "Building"
 os: linux
-compiler: gcc
+compiler: cpp
 script:
-- gcc -fPIC -c matrixfact.c -o matrixfact.o
-- gcc -shared matrixfact.o -o libmatrixfact.so
-- gcc -I`pwd` -L`pwd` dinoPRO.c -lmatrixfact -o dinoPRO
+ - wc -l lb1.cpp
+
 
 
 - stage: Documentation
 
 name: "Documentation"
 os: linux
-compiler: gcc
+compiler: cpp
 before_install:
 - sudo apt-get install doxygen
 script:
-- git clone https://github.com/ImyaPolzovatelyaPolzovatel/Doxygen..
-- mv Doxyfile matrixfact.c Doxygen/
-- cd Doxygen
-- doxygen
-- rm Doxyfile matrixfact.c
-- git config —global user.name "travis"
-- git config —global user.email "2019103620@pnu.edu.ru"
-- git add -A
-- git commit -am "Update doc from Travis CI"
-- git config —global push.default simple
-- git push -f -q https://ImyaPolzovatelyaPolzovatel:${GITHUB_API_KEY}@github.com/ImyaPolzovatelyaPolzovatel/Doxygen.git
+ - git clone https://github.com/warfka/firstRep.io.git
+  - cd firstRep.io
+  - doxygen
+  - git config --global user.name "warfka"
+  - git config --global user.email "travis@travis.org"
+  - git add -A
+  - git commit -am "Update doc from Travis CI"
+  - git config --global push.default simple
+  - git push -f -q https://warfka:$GITHUB_API_KEY@github.com/warfka/firstRep.io.git
